--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "fancybox": "^3.0.1",
     "jquery": "^3.4.1",
+    "smooth-scrollbar": "^8.5.2",
     "swiper": "^5.3.6"
   },
   "scripts": {
