--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "fancybox": "^3.0.1",
+    "gulp-cli": "^2.2.0",
     "jquery": "^3.4.1",
     "smooth-scrollbar": "^8.5.2",
     "swiper": "^5.3.6"
