--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "fancybox": "^3.0.1",
     "jquery": "^3.4.1",
     "smooth-scrollbar": "^8.5.2",
-    "swiper": "^5.3.6"
+    "swiper": "^5.3.6",
+    "ymaps": "^0.2.1"
   },
   "scripts": {
     "watch": "gulp watch",
