--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
+    "animejs": "^3.1.0",
+    "charming": "^3.0.2",
     "fancybox": "^3.0.1",
     "jquery": "^3.4.1",
     "jquery.maskedinput": "^1.4.1",
