Dashed line, images

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "select2": "^4.0.13",
     "smooth-scrollbar": "^8.5.2",
     "swiper": "^5.3.6",
+    "yarn": "^1.22.4",
     "ymaps": "^0.2.1"
   },
   "scripts": {
